--- a/index.html
+++ b/index.html
@@ -110,6 +110,86 @@
                             <a href="#">복사</a>
                         </li>
                     </ul>
+                    <ul class="grid-item">
+                        <li><input type="checkbox"></li>
+                        <li><input type="text" list="dep-list"></li>
+                        <li>notice</li>
+                        <li><input type="text" list="skin-list"></li>
+                        <li><input type="text" list="mobile-skin-list"></li>
+                        <li><input type="text"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="checkbox"></li>
+                        <li><input type="checkbox"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="text" list="dvice-list"></li>
+                        <li>
+                            <a href="#">수정</a>
+                            <a href="#">복사</a>
+                        </li>
+                    </ul>
+                    <ul class="grid-item">
+                        <li><input type="checkbox"></li>
+                        <li><input type="text" list="dep-list"></li>
+                        <li>notice</li>
+                        <li><input type="text" list="skin-list"></li>
+                        <li><input type="text" list="mobile-skin-list"></li>
+                        <li><input type="text"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="checkbox"></li>
+                        <li><input type="checkbox"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="text" list="dvice-list"></li>
+                        <li>
+                            <a href="#">수정</a>
+                            <a href="#">복사</a>
+                        </li>
+                    </ul>
+                    <ul class="grid-item">
+                        <li><input type="checkbox"></li>
+                        <li><input type="text" list="dep-list"></li>
+                        <li>notice</li>
+                        <li><input type="text" list="skin-list"></li>
+                        <li><input type="text" list="mobile-skin-list"></li>
+                        <li><input type="text"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="checkbox"></li>
+                        <li><input type="checkbox"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="text" list="dvice-list"></li>
+                        <li>
+                            <a href="#">수정</a>
+                            <a href="#">복사</a>
+                        </li>
+                    </ul>
+                    <ul class="grid-item">
+                        <li><input type="checkbox"></li>
+                        <li><input type="text" list="dep-list"></li>
+                        <li>notice</li>
+                        <li><input type="text" list="skin-list"></li>
+                        <li><input type="text" list="mobile-skin-list"></li>
+                        <li><input type="text"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="checkbox"></li>
+                        <li><input type="checkbox"></li>
+                        <li><input type="number" min="0" max="100"></li>
+                        <li><input type="text" list="dvice-list"></li>
+                        <li>
+                            <a href="#">수정</a>
+                            <a href="#">복사</a>
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="btn-group">
